tests/NormalTests/paczka1/small_fuzzy/81093777.err
Error in line 1: ?ncQ4^qBr
Error in line 7: AjCB1S A649 1,6
Error in line 8: AjCB1S S217 69,5
